fix: Improve readability of Done and Skipped

--- a/src/components/EditorRoadmap/EditorRoadmapRenderer.css
+++ b/src/components/EditorRoadmap/EditorRoadmapRenderer.css
@@ -40,6 +40,7 @@ svg .done rect {
 svg .done text,
 svg .skipped text {
   text-decoration: line-through;
+  text-decoration-thickness: 1px;
 }
 
 svg > g[data-type='topic'].learning > rect + text,
